tests/baselines/reference/parseNoWhitespaceBeforeExclamation.errors.txt
parseNoWhitespaceBeforeExclamation.ts(3,6): error TS1289: A non-null assertion may not be preceded by whitespace.
parseNoWhitespaceBeforeExclamation.ts(4,6): error TS1289: A non-null assertion may not be preceded by whitespace.
parseNoWhitespaceBeforeExclamation.ts(5,6): error TS1289: A non-null assertion may not be preceded by whitespace.
parseNoWhitespaceBeforeExclamation.ts(6,6): error TS1289: A non-null assertion may not be preceded by whitespace.
parseNoWhitespaceBeforeExclamation.ts(7,6): error TS1289: A non-null assertion may not be preceded by whitespace.
parseNoWhitespaceBeforeExclamation.ts(8,6): error TS1289: A non-null assertion may not be preceded by whitespace.
parseNoWhitespaceBeforeExclamation.ts(9,6): error TS1289: A non-null assertion may not be preceded by whitespace.
parseNoWhitespaceBeforeExclamation.ts(10,6): error TS1289: A non-null assertion may not be preceded by whitespace.
parseNoWhitespaceBeforeExclamation.ts(11,6): error TS1289: A non-null assertion may not be preceded by whitespace.


==== parseNoWhitespaceBeforeExclamation.ts (9 errors) ====
    declare var value: any;
    
    value !;
         ~~
!!! error TS1289: A non-null assertion may not be preceded by whitespace.
    value !instanceof String;
         ~~
!!! error TS1289: A non-null assertion may not be preceded by whitespace.
    value ! instanceof String
         ~~
!!! error TS1289: A non-null assertion may not be preceded by whitespace.
    value/* this is a comment */!instanceof String;
         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1289: A non-null assertion may not be preceded by whitespace.
    value/* this is a comment */! instanceof String;
         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1289: A non-null assertion may not be preceded by whitespace.
    value !in String;
         ~~
!!! error TS1289: A non-null assertion may not be preceded by whitespace.
    value ! in String
         ~~
!!! error TS1289: A non-null assertion may not be preceded by whitespace.
    value/* this is a comment */!in String;
         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1289: A non-null assertion may not be preceded by whitespace.
    value/* this is a comment */! in String;
         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1289: A non-null assertion may not be preceded by whitespace.
    